# Volleyball-Group-Activity-Recognition

./: .gitignore  BUG_REPORT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/: __init__.py  baseline1.yaml  baseline3.yaml  baseline4.yaml  baseline5.yaml  baseline6.yaml  data_split.py  labels.py  path_config.py
configs/transforms/: crop_transforms.yaml  default_transforms.yaml
kaggleTraningNotebooks/: volleyball-project-baseline-1.ipynb  volleyball-project-baseline-3.ipynb  volleyball-project-baseline-4.ipynb
logs/baseline1/: run1.json  run2.json  run3.json  run6.json  run7.json
logs/baseline3/: run1.json  run2.json
logs/baseline4/: run1.json  run2.json
logs/baseline5/: run1.json  run2.json  run2_a.json  run4.json
logs/baseline6/: run1.json  run2.json
models/: baseline1.py  baseline3.py  baseline4.py  baseline5.py  baseline6.py  baseline7.py
reports/: report.aux  report.run.xml  report.tex  tau.bib
reports/tau-class/: tau.cls  taubabel.sty  tauenvs.sty
runs/Dec07_14-07-03_192.168.1.11/: events.out.tfevents.1765109223.192.168.1.11.1977569.0
runs/Dec07_14-41-52_192.168.1.11/: events.out.tfevents.1765111312.192.168.1.11.1999430.0
saved_models/: modelsDriveLink.txt
src/: json_parser.py  load_frames_into_lmdb.py  load_frames_into_pickle.py  pickle_dump.py
src/data/: base_dataset.py  (+5 more)
utils/: __init__.py  download_diff_kaggley.py  download_models.py  evaluate.py  featureExtractor.py  load_model_config.py  plotting.py  utility.py
volleyball-project/: kernel-metadata.json  volleyball-project-baseline-1.ipynb
(+63 files in other folders)
