[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmdb>=2.2.0",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow==12.2.0",
    "pydantic",
    "requests==2.32.5",
    "scikit-learn",
    "torch==2.9.0",
    "torchinfo==1.8.0",
    "torchsummary==1.5.1",
    "torchvision==0.24.0",
    "tqdm==4.67.3",
]
