[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "hydra-core>=1.3.2",
    "isort>=8.0.1",
    "kaggle>=2.2.0",
    "lmdb>=2.2.0",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow==12.2.0",
    "pydantic",
    "requests==2.32.5",
    "ruff>=0.15.14",
    "scikit-learn",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "torch==2.9.0",
    "torchinfo==1.8.0",
    "torchsummary==1.5.1",
    "torchvision==0.24.0",
    "tqdm==4.67.3",
    "wrapt>=2.2.1",
]

[tool.pyright]
extraPaths = ["."]
